--- a/tourapp/package.json
+++ b/tourapp/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    
     "start": "node ./bin/www",
     "build": "webpack --config webpack.config.js"
   },
@@ -13,6 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-promise-router": "^3.0.3",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
