--- a/tourapp/package.json
+++ b/tourapp/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tourapp",
+  "name": "TinyTownTours",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "concurrently --kill-others \"node ./bin/www \" \"node ./bin/socketServer.js\"",
     "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -19,10 +19,18 @@
     "pg": "^8.0.0",
     "require": "^2.4.20",
     "requirejs": "^2.3.6",
+    "serve": "^11.3.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uglify-js": "^3.8.1",
     "webpack": "^4.42.1"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/afeather20/TinyTownTours.git",
+  "author": "ADam",
+  "license": "MIT"
 }
