--- a/tourapp/package.json
+++ b/tourapp/package.json
@@ -13,20 +13,20 @@
     "express": "~4.16.1",
     "express-promise-router": "^3.0.3",
     "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
-    "jquery": "^3.4.1",
     "morgan": "~1.9.1",
-    "pg": "^8.0.0",
+    "pg": "^8.0.3",
     "require": "^2.4.20",
     "requirejs": "^2.3.6",
     "serve": "^11.3.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "uglify-js": "^3.8.1",
-    "webpack": "^4.42.1"
+    "uglify-js": "^3.9.1",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
     "webpack-cli": "^3.3.11"
   },
   "main": "index.js",
